--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>Minecraft Choke7</title>
   </head>
   <body>
+    <script>
+      (function() {
+        try {
+          const theme = localStorage.getItem('theme') || 
+                      localStorage.getItem('vite-ui-theme') || 
+                      'dark';
+          
+          const isDark = theme === 'dark' || 
+                        (theme === 'system' && window.matchMedia('(prefers-color-scheme: dark)').matches);
+          
+          document.documentElement.classList.toggle('dark', isDark);
+          document.documentElement.style.colorScheme = isDark ? 'dark' : 'light';
+        } catch (e) {
+          document.documentElement.classList.add('dark');
+        }
+      })();
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
